# mlp_qmmm

./: DOC.md  LICENSE  README.md  pyproject.toml
examples/: config.yml  config_nt1_5k_big
src/mlp_qmmm/: __init__.py  a0_structure.py  a1_postprocess.py  a2_parser.py  a_parser.py  b_nn_loader.py  b_training.py  c_testing.py  d_dpmmincharmm.py  testing.py  trainer_utils.py  training.py
src/mlp_qmmm/a_input_types/: __init__.py  charmm_mndo97.py  charmmmndo97mts.py  numpy_folder.py
src/mlp_qmmm/b_nn_types/: __init__.py  dp_qmmm_implicit.py  dpmm_v0.py  dpmm_v1.py  painn_mm.py
